Bug 385260 - Regression: Virtual desktops not working
Summary: Regression: Virtual desktops not working
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: git master
Platform: openSUSE Linux
: HI major
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D8086
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-01 13:10 UTC by Fabian Vogt
Modified: 2017-10-01 19:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: X11+
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2017-10-01 13:10:17 UTC
openQA caught that the virtual desktop selector in the panel is empty: https://openqa.opensuse.org/tests/496383#step/finish_desktop/7

Running the iso in a VM confirms that only a single virtual desktop exists (empty name) and adding additional ones has no effect.

Replacing kwin with 5.10.5 and restarting the session causes it to work again.

Git commit used in last good openQA run: a7c396cae
Git commit used in first bad openQA run: 2fb5a5fb9
Comment 1 Martin Flöser 2017-10-01 13:19:05 UTC
Did I mention that I love openQA?
Comment 2 Martin Flöser 2017-10-01 13:41:26 UTC
Patch at: https://phabricator.kde.org/D8086
Comment 3 Martin Flöser 2017-10-01 19:57:04 UTC
Git commit f988a5f6547b92d68f987534252497ba618c4ff1 by Martin Flöser.
Committed on 01/10/2017 at 19:56.
Pushed by graesslin into branch 'master'.

Reload VirtualDesktop settings after passing RootInfo on VirtualDesktopManager

Summary:
The load method and updateLayout ensure the virtual desktop information
is synced to RootInfo and thus to other X11 applications. Thus we need
to call it again when initing X11.

Test Plan: Not tested as I'm on Wayland, but given the changes it's obvious.

Reviewers: #kwin, #plasma

Subscribers: plasma-devel, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D8086

M  +5    -4    virtualdesktops.h
M  +5    -1    workspace.cpp

https://commits.kde.org/kwin/f988a5f6547b92d68f987534252497ba618c4ff1